--- a/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
+++ b/Basic JavaScript Projects/Project9_countdown_slideshow/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>JavaScript Program</title>        
+        <title>JavaScript Program</title>
+        <script src="js/main.js" defer></script>
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
@@ -46,7 +47,5 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
-        
-        <script src="js/main.js"></script>
     </body>
 </html>
